Some small tidying up.